--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,12 @@
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../node_modules/react-native-permissions/scripts/setup'
 
 platform :ios, '13.0'
 prepare_react_native_project!
 $RNMapboxMapsImpl = 'mapbox'
+
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
@@ -75,6 +77,10 @@ target 'HeliumWallet' do
   pre_install do |installer|
     $RNMapboxMaps.pre_install(installer)
   end
+
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  setup_permissions(['BluetoothPeripheral'])
 
   post_install do |installer|
     $RNMapboxMaps.post_install(installer)
