--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@helium/lazy-distributor-sdk": "^0.2.17",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "1.0.0",
+    "@helium/react-native-sdk": "^2.1.4",
     "@helium/spl-utils": "^0.2.17",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
@@ -165,6 +165,7 @@
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
     "react-native-pager-view": "6.1.2",
+    "react-native-permissions": "^3.9.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.14.4",
