--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
-    "@coral-xyz/anchor": "0.26.0",
+    "@coral-xyz/anchor": "^0.27.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
     "@helium/account-fetch-cache": "^0.2.17",
