--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ yalc.lock
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# testing
+/coverage
