--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,26 @@
 
 buildscript {
     ext {
+        // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+        ndkVersion = "23.1.7779620"
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 24
+        minSdkVersion = 30
         compileSdkVersion = 33
         targetSdkVersion = 33
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
-        kotlinVersion = "1.5.31"
+        kotlinVersion = "1.9.0"
         RNMapboxMapsImpl = "mapbox" // required for v10
+    }
+    subprojects { subproject ->
+        afterEvaluate{
+            if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+                android {
+                    compileSdkVersion rootProject.ext.compileSdkVersion
+                    buildToolsVersion rootProject.ext.buildToolsVersion
+                }
+            }
+        }
     }
     repositories {
         google()
@@ -17,7 +29,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath("com.android.tools.build:gradle:7.4.1")
+        classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
 
         // Expo is not able to build without this kotlin-gradle-plugin
@@ -31,7 +43,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         mavenLocal()
         maven {
             // expo-camera bundles a custom com.google.android:cameraview
