--- a/package.json
+++ b/package.json
@@ -68,12 +68,12 @@
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@pythnetwork/client": "^2.17.0",
-    "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.15",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
     "@react-navigation/native": "6.0.11",
@@ -115,17 +115,17 @@
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
     "events": "3.3.0",
-    "expo": "48.0.15",
-    "expo-asset": "8.9.1",
-    "expo-barcode-scanner": "12.3.2",
-    "expo-camera": "13.2.1",
-    "expo-constants": "14.2.1",
-    "expo-haptics": "12.2.1",
-    "expo-linking": "4.0.1",
-    "expo-local-authentication": "13.3.0",
-    "expo-permissions": "14.1.1",
-    "expo-secure-store": "12.1.1",
-    "expo-splash-screen": "0.18.2",
+    "expo": "^49.0.0",
+    "expo-asset": "~8.10.1",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-haptics": "~12.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-permissions": "~14.2.1",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "fuse.js": "6.6.2",
     "h3-js": "^4.1.0",
     "https-browserify": "0.0.1",
@@ -142,7 +142,7 @@
     "react": "18.2.0",
     "react-async-hook": "4.0.0",
     "react-i18next": "11.18.4",
-    "react-native": "0.71.5",
+    "react-native": "0.72.4",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
     "react-native-charts-wrapper": "0.5.10",
@@ -151,8 +151,8 @@
     "react-native-currency-format": "1.0.19",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.9.0",
-    "react-native-get-random-values": "1.8.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "~1.9.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -164,25 +164,25 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.1.2",
+    "react-native-pager-view": "6.2.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "3.20.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.23",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "0.4.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "^1.1.0",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.1",
-    "react-native-webview": "12.0.2",
+    "react-native-webview": "13.2.2",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -207,7 +207,9 @@
     "@babel/preset-env": "7.20.2",
     "@babel/runtime": "7.20.13",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
-    "@tsconfig/react-native": "2.0.2",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
+    "@tsconfig/react-native": "^3.0.0",
     "@types/bn.js": "5.1.1",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
@@ -241,7 +243,7 @@
     "jest": "29.2.1",
     "jetifier": "1.6.8",
     "lint-staged": "11.2.6",
-    "metro-react-native-babel-preset": "0.66.2",
+    "metro-react-native-babel-preset": "0.76.8",
     "prettier": "2.7.1",
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
@@ -250,7 +252,7 @@
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
-    "typescript": "4.9.4"
+    "typescript": "^5.1.3"
   },
   "resolutions": {
     "@types/react": "17"
@@ -317,5 +319,8 @@
     "tty": "tty-browserify",
     "vm": "vm-browserify",
     "tls": false
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
