--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
-    "@rnmapbox/maps": "10.0.15",
+    "@rnmapbox/maps": "v10.1.0-beta.4",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "^0.2.3",
@@ -167,7 +167,7 @@
     "react-native-pager-view": "6.2.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "3.5.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-share": "7.9.0",
