--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
+    "@bonfida/spl-name-service": "^1.1.1",
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
