--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
     "@bonfida/spl-name-service": "^1.1.1",
-    "@coral-xyz/anchor": "0.28.0",
+    "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
     "@helium/account-fetch-cache": "^0.3.2",
