--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.0",
-    "@helium/spl-utils": "^0.3.2",
+    "@helium/spl-utils": "^0.4.1-next.0",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
     "@helium/voter-stake-registry-sdk": "0.1.2",
