--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -37,32 +37,33 @@
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
     "@bonfida/spl-name-service": "^1.1.1",
-    "@coral-xyz/anchor": "0.28.0",
+    "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.3.2",
-    "@helium/account-fetch-cache-hooks": "^0.3.2",
+    "@helium/account-fetch-cache": "^0.4.0",
+    "@helium/account-fetch-cache-hooks": "^0.4.0",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.3.2",
+    "@helium/circuit-breaker-sdk": "^0.4.0",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "0.1.1",
-    "@helium/data-credits-sdk": "^0.3.2",
-    "@helium/distributor-oracle": "^0.3.2",
-    "@helium/fanout-sdk": "^0.3.2",
-    "@helium/helium-entity-manager-sdk": "^0.3.2",
-    "@helium/helium-react-hooks": "^0.3.2",
-    "@helium/helium-sub-daos-sdk": "^0.3.2",
+    "@helium/currency-utils": "^0.4.0",
+    "@helium/data-credits-sdk": "^0.4.0",
+    "@helium/distributor-oracle": "^0.4.0",
+    "@helium/fanout-sdk": "^0.4.0",
+    "@helium/helium-entity-manager-sdk": "^0.4.0",
+    "@helium/helium-react-hooks": "^0.4.0",
+    "@helium/helium-sub-daos-sdk": "^0.4.0",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.3.2",
-    "@helium/lazy-distributor-sdk": "^0.3.2",
+    "@helium/idls": "^0.4.0",
+    "@helium/lazy-distributor-sdk": "^0.4.0",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.0",
     "@helium/spl-utils": "^0.4.0",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "0.1.2",
-    "@helium/voter-stake-registry-sdk": "0.1.2",
+    "@helium/treasury-management-sdk": "^0.4.0",
+    "@helium/voter-stake-registry-sdk": "^0.4.0",
     "@helium/wallet-link": "4.10.0",
+    "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
@@ -91,7 +92,7 @@
     "@solana/spl-token-registry": "0.2.4574",
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
-    "@solana/web3.js": "1.64.0",
+    "@solana/web3.js": "1.67.2",
     "@tradle/react-native-http": "2.0.1",
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
