--- a/package.json
+++ b/package.json
@@ -40,33 +40,33 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.4.5",
-    "@helium/account-fetch-cache-hooks": "^0.4.5",
+    "@helium/account-fetch-cache": "^0.5.0",
+    "@helium/account-fetch-cache-hooks": "^0.5.0",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.4.5",
+    "@helium/circuit-breaker-sdk": "^0.5.0",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.4.5",
-    "@helium/data-credits-sdk": "^0.4.5",
-    "@helium/distributor-oracle": "^0.4.5",
-    "@helium/fanout-sdk": "^0.4.5",
-    "@helium/helium-entity-manager-sdk": "^0.4.5",
-    "@helium/helium-react-hooks": "^0.4.5",
-    "@helium/helium-sub-daos-sdk": "^0.4.5",
+    "@helium/currency-utils": "^0.5.0",
+    "@helium/data-credits-sdk": "^0.5.0",
+    "@helium/distributor-oracle": "^0.5.0",
+    "@helium/fanout-sdk": "^0.5.0",
+    "@helium/helium-entity-manager-sdk": "^0.5.0",
+    "@helium/helium-react-hooks": "^0.5.0",
+    "@helium/helium-sub-daos-sdk": "^0.5.0",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.4.5",
-    "@helium/lazy-distributor-sdk": "^0.4.5",
-    "@helium/modular-governance-hooks": "^0.0.6",
-    "@helium/modular-governance-idls": "^0.0.6",
+    "@helium/idls": "^0.5.0",
+    "@helium/lazy-distributor-sdk": "^0.5.0",
+    "@helium/modular-governance-hooks": "^0.0.7",
+    "@helium/modular-governance-idls": "^0.0.7",
     "@helium/onboarding": "4.9.0",
-    "@helium/organization-sdk": "^0.0.6",
+    "@helium/organization-sdk": "^0.0.7",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.0",
-    "@helium/spl-utils": "^0.4.5",
-    "@helium/state-controller-sdk": "^0.0.6",
+    "@helium/spl-utils": "^0.5.0",
+    "@helium/state-controller-sdk": "^0.0.7",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.4.5",
-    "@helium/voter-stake-registry-hooks": "^0.4.5",
-    "@helium/voter-stake-registry-sdk": "^0.4.5",
+    "@helium/treasury-management-sdk": "^0.5.0",
+    "@helium/voter-stake-registry-hooks": "^0.5.0",
+    "@helium/voter-stake-registry-sdk": "^0.5.0",
     "@helium/wallet-link": "4.10.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -265,11 +265,11 @@
     "rn-nodeify": "10.3.0",
     "typescript": "4.9.4"
   },
-  "resolutions": {
+  "eutions": {
     "@types/react": "17",
-    "@helium/account-fetch-cache-hooks": "^0.4.6",
-    "@helium/helium-react-hooks": "^0.4.6",
-    "@helium/voter-stake-registry-hooks": "^0.4.6",
+    "@helium/account-fetch-cache-hooks": "^0.5.0",
+    "@helium/helium-react-hooks": "^0.5.0",
+    "@helium/voter-stake-registry-hooks": "^0.5.0",
     "@helium/modular-governance-hooks": "^0.0.7"
   },
   "jest": {
