--- a/package.json
+++ b/package.json
@@ -265,12 +265,12 @@
     "rn-nodeify": "10.3.0",
     "typescript": "4.9.4"
   },
-  "eutions": {
+  "resolutions": {
     "@types/react": "17",
     "@helium/account-fetch-cache-hooks": "^0.5.0",
     "@helium/helium-react-hooks": "^0.5.0",
     "@helium/voter-stake-registry-hooks": "^0.5.0",
-    "@helium/modular-governance-hooks": "^0.0.7"
+    "@helium/modular-governance-hooks": "^0.0.8"
   },
   "jest": {
     "preset": "react-native",
