--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
     "@rnmapbox/maps": "10.0.7-rc.0",
-    "@shopify/restyle": "^2.4.2",
+    "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "0.2.3",
     "@solana/spl-token": "0.3.6",
