--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.6.6",
     "@helium/lazy-distributor-sdk": "^0.6.6",
-    "@helium/onboarding": "^4.10.3",
+    "@helium/onboarding": "4.8.3-next.58+7ab9a36",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.3",
     "@helium/spl-utils": "^0.6.6",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.6.6",
     "@helium/voter-stake-registry-sdk": "^0.6.6",
-    "@helium/wallet-link": "4.10.0",
+    "@helium/wallet-link": "4.8.3-next.58+7ab9a36",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
     "@ledgerhq/react-native-hid": "6.30.0",
@@ -102,6 +102,7 @@
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
     "axios": "1.3.2",
+    "axios-mock-adapter": "^1.22.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
@@ -110,6 +111,7 @@
     "bs58": "5.0.0",
     "buffer": "6.0.3",
     "camelcase-keys": "7.0.2",
+    "compare-versions": "^6.1.0",
     "console-browserify": "1.2.0",
     "constants-browserify": "1.0.0",
     "crypto": "1.0.1",
