--- a/package.json
+++ b/package.json
@@ -21,11 +21,6 @@
     "gen-types:all": "yarn gen-types",
     "prepare": "husky install"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{js,ts,tsx,md,html}": [
       "prettier --write ."
@@ -40,28 +35,28 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.6.6",
-    "@helium/account-fetch-cache-hooks": "^0.6.6",
+    "@helium/account-fetch-cache": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/account-fetch-cache-hooks": "^0.6.12-NEXT.3+4E9F6FB4",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.6.6",
+    "@helium/circuit-breaker-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency-utils": "^0.6.6",
-    "@helium/data-credits-sdk": "^0.6.6",
-    "@helium/distributor-oracle": "^0.6.6",
-    "@helium/fanout-sdk": "^0.6.6",
-    "@helium/helium-entity-manager-sdk": "^0.6.6",
-    "@helium/helium-react-hooks": "^0.6.6",
-    "@helium/helium-sub-daos-sdk": "^0.6.6",
+    "@helium/data-credits-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/distributor-oracle": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/fanout-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/helium-entity-manager-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/helium-react-hooks": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/helium-sub-daos-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.6.6",
-    "@helium/lazy-distributor-sdk": "^0.6.6",
+    "@helium/idls": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/lazy-distributor-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
     "@helium/onboarding": "4.11.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.4",
-    "@helium/spl-utils": "^0.6.6",
+    "@helium/spl-utils": "^0.6.12-NEXT.3+4E9F6FB4",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.6.6",
-    "@helium/voter-stake-registry-sdk": "^0.6.6",
+    "@helium/treasury-management-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
+    "@helium/voter-stake-registry-sdk": "^0.6.12-NEXT.3+4E9F6FB4",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -91,7 +86,7 @@
     "@solana/spl-token": "0.3.6",
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
-    "@solana/web3.js": "1.67.2",
+    "@solana/web3.js": "^1.87.6",
     "@tradle/react-native-http": "2.0.1",
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
