--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-ios/.xcode.env.local
+**/.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -62,7 +62,7 @@ yalc.lock
 *.jsbundle
 
 # CocoaPods
-/ios/Pods/
+**/Pods/
 /vendor/bundle/
 
 #
@@ -75,3 +75,14 @@ yalc.lock
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# testing
+/coverage
+ 
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
