--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "extends": "expo/tsconfig.base"
+  "extends": "@react-native/typescript-config/tsconfig.json"
 }
