--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
     "@maplibre/maplibre-react-native": "^9.1.0",
+    "@metaplex-foundation/js": "^0.19.5",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@novalabsxyz/mobile-theme": "2.0.0-y.25",
